Fix spacing issue in parts comparison page from new sprites

--- a/src/ts/components/GameDetails/Details.less
+++ b/src/ts/components/GameDetails/Details.less
@@ -70,6 +70,7 @@
     margin-bottom: 0;
     margin-top: 0;
     max-width: @details-max-width;
+    height: 48px;
 
     display: flex;
     flex-wrap: wrap;
