--- a/src/ts/components/Pages/PartsPage/PartsPage.less
+++ b/src/ts/components/Pages/PartsPage/PartsPage.less
@@ -128,3 +128,8 @@
     color: @comparison-negative-font-color;
     background-color: @comparison-negative-background-color;
 }
+
+.comparison-sprite-line {
+    height: 48px;
+    margin: 0;
+}
